--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: heejinsoulyves
 
 # Short bio or description (displayed in the header)
-description: tripleS, ARTMS, NewJeans, fromis_9, IVE, NMIXX, STAYC, Loossemble, LE SSERAFIM.
+description: tripleS, ARTMS, NewJeans, fromis_9, IVE, NMIXX, STAYC, Loossemble, LE SSERAFIM
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars.githubusercontent.com/u/190813193
