--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ footer-links:
   email:
   github: heejinsoulyves
   instagram: heejinsoulyves
-  rss: # just type anything here for a working RSS icon
-  twitter: heejinsoulyves
+  rss: # rss
+  twitter: gg_pics_
   youtube: # user/heejinsoulyves
 
 # Your website URL
