--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ footer-links:
   email:
   github: heejinsoulyves
   instagram: heejinsoulyves
-  rss: # rss
+  rss: rss
   twitter: gg_pics_
-  youtube: # user/heejinsoulyves
+  youtube: user/heejinsoulyves
 
 # Your website URL
 # Used for Sitemap.xml and your RSS feed
