--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ footer-links:
   instagram: heejinsoulyves
   rss: rss
   twitter: gg_pics_
-  youtube: user/heejinsoulyves
+  youtube: @heejinsoulyves
 
 # Your website URL
 # Used for Sitemap.xml and your RSS feed
