--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ footer-links:
 
 # Your website URL
 # Used for Sitemap.xml and your RSS feed
-url: https://heejinsoulyves.github.io
+url: https://heejinsoulyves.com
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
