--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   github: heejinsoulyves
   instagram: heejinsoulyves
   rss: rss
-  twitter: gg_pics_
+  twitter: heejinsoulyves
   youtube: 
 
 # Your website URL
